--- a/weatherappdemo/modules/home/cells/HomeCollectionViewCell.xib
+++ b/weatherappdemo/modules/home/cells/HomeCollectionViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeCollectionViewCell" id="gTV-IL-0wX" customClass="HomeCollectionViewCell" customModule="WeatherApp" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeCollectionViewCell" id="gTV-IL-0wX" customClass="HomeCollectionViewCell" customModule="The_Weather_App" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="359" height="232"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -21,32 +21,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="359" height="232"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1zh-nW-pwX" userLabel="icon">
-                                <rect key="frame" x="154.5" y="36" width="50" height="50"/>
+                                <rect key="frame" x="154.5" y="10" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="1zh-nW-pwX" secondAttribute="height" multiplier="1:1" id="NeG-PN-TOC"/>
                                     <constraint firstAttribute="width" constant="50" id="f9A-EP-95B"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Boj-XD-iUw" userLabel="City">
-                                <rect key="frame" x="177.5" y="106" width="4.5" height="20.5"/>
+                                <rect key="frame" x="177.5" y="80" width="4.5" height="72"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="min" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aaV-cM-QwI">
-                                <rect key="frame" x="138.5" y="146.5" width="28" height="20.5"/>
+                                <rect key="frame" x="139" y="172" width="28" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRp-C6-O0O">
-                                <rect key="frame" x="177" y="147" width="5.5" height="21"/>
+                                <rect key="frame" x="177" y="172" width="5.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="max" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="99G-lm-aXJ">
-                                <rect key="frame" x="192.5" y="146.5" width="32" height="21"/>
+                                <rect key="frame" x="192.5" y="172" width="32" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -57,7 +57,7 @@
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="aaV-cM-QwI" secondAttribute="bottom" constant="10" id="0N6-vc-W2F"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="99G-lm-aXJ" secondAttribute="trailing" id="5Vr-0k-zz2"/>
                             <constraint firstItem="gRp-C6-O0O" firstAttribute="top" secondItem="Boj-XD-iUw" secondAttribute="bottom" constant="20" id="6jP-RQ-KNd"/>
-                            <constraint firstItem="1zh-nW-pwX" firstAttribute="top" relation="greaterThanOrEqual" secondItem="0So-v2-4M8" secondAttribute="top" constant="10" id="7ea-rX-SN4"/>
+                            <constraint firstItem="1zh-nW-pwX" firstAttribute="top" secondItem="0So-v2-4M8" secondAttribute="top" constant="10" id="7ea-rX-SN4"/>
                             <constraint firstItem="gRp-C6-O0O" firstAttribute="centerX" secondItem="0So-v2-4M8" secondAttribute="centerX" id="GOb-V8-6A5"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="gRp-C6-O0O" secondAttribute="bottom" constant="10" id="Nea-Sm-6Z4"/>
                             <constraint firstItem="aaV-cM-QwI" firstAttribute="firstBaseline" secondItem="gRp-C6-O0O" secondAttribute="firstBaseline" id="PBI-AS-6Ae"/>
