--- a/weatherappdemo/supporting files/Base.lproj/Main.storyboard
+++ b/weatherappdemo/supporting files/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="HomeViewController" id="BYZ-38-t0r" customClass="HomeViewController" customModule="The_Weather_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewController" autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="HomeViewController" customModule="The_Weather_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -47,6 +47,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <connections>
                         <outlet property="weatherCollectionView" destination="d8f-CQ-qZZ" id="6CW-jY-9a8"/>
                     </connections>
@@ -77,27 +78,27 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="gQv-NZ-evK">
-                                <rect key="frame" x="25" y="398" width="364" height="148"/>
+                                <rect key="frame" x="25" y="408" width="364" height="138"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="lZY-be-sgD">
-                                        <rect key="frame" x="0.0" y="0.0" width="75.666666666666671" height="148"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="75.666666666666671" height="138"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pressure" translatesAutoresizingMaskIntoConstraints="NO" id="Nh9-lB-sSW">
-                                                <rect key="frame" x="3" y="0.0" width="70" height="70"/>
+                                                <rect key="frame" x="8" y="0.0" width="60" height="60"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="Nh9-lB-sSW" secondAttribute="height" multiplier="1:1" id="TeI-uL-VUP"/>
-                                                    <constraint firstAttribute="height" constant="70" id="dB6-4X-0KZ"/>
+                                                    <constraint firstAttribute="height" constant="60" id="dB6-4X-0KZ"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eHW-FF-NSB">
-                                                <rect key="frame" x="35.666666666666664" y="85" width="4.6666666666666643" height="24"/>
+                                                <rect key="frame" x="35.666666666666664" y="75" width="4.6666666666666643" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pressure" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fa3-Hv-GmJ">
-                                                <rect key="frame" x="0.0" y="124" width="75.666666666666671" height="24"/>
+                                                <rect key="frame" x="0.0" y="114" width="75.666666666666671" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -105,24 +106,24 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Ldb-VL-emC">
-                                        <rect key="frame" x="144" y="0.0" width="78.666666666666686" height="148"/>
+                                        <rect key="frame" x="146.66666666666666" y="0.0" width="78.666666666666657" height="138"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="humidity" translatesAutoresizingMaskIntoConstraints="NO" id="8QW-K2-Ptt">
-                                                <rect key="frame" x="4.3333333333333428" y="0.0" width="70" height="70"/>
+                                                <rect key="frame" x="9.3333333333333428" y="0.0" width="60" height="60"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="8QW-K2-Ptt" secondAttribute="height" multiplier="1:1" id="Ac4-Xb-Nq5"/>
-                                                    <constraint firstAttribute="height" constant="70" id="Gng-0S-QHB"/>
+                                                    <constraint firstAttribute="height" constant="60" id="Gng-0S-QHB"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RnF-Ht-D3A">
-                                                <rect key="frame" x="37" y="85" width="4.6666666666666643" height="24"/>
+                                                <rect key="frame" x="37" y="75" width="4.6666666666666643" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Humidity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rUS-SN-UfH">
-                                                <rect key="frame" x="0.0" y="124" width="78.666666666666671" height="24"/>
+                                                <rect key="frame" x="0.0" y="114" width="78.666666666666671" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -130,24 +131,24 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="klN-FG-acL">
-                                        <rect key="frame" x="294" y="0.0" width="70" height="148"/>
+                                        <rect key="frame" x="304" y="0.0" width="60" height="138"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wind" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="61s-BG-K1Y">
-                                                <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="70" id="LfY-56-erU"/>
+                                                    <constraint firstAttribute="height" constant="60" id="LfY-56-erU"/>
                                                     <constraint firstAttribute="width" secondItem="61s-BG-K1Y" secondAttribute="height" multiplier="1:1" id="s7y-0k-DXs"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nom-h2-pGR">
-                                                <rect key="frame" x="32.666666666666686" y="85" width="4.6666666666666643" height="24"/>
+                                                <rect key="frame" x="27.666666666666686" y="75" width="4.6666666666666643" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wind" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AFC-Yu-gWr">
-                                                <rect key="frame" x="12.333333333333311" y="124" width="45.666666666666657" height="24"/>
+                                                <rect key="frame" x="7.3333333333333144" y="114" width="45.666666666666664" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
